# agstash

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod
cmd/agstash/: main.go
internal/commands/: commands.go  commands_test.go
internal/utils/: errors.go  utils.go  utils_test.go
src/: main.rs
src/commands/: mod.rs
src/utils/: mod.rs
tests/: cli_tests.rs  integration_test.go  integration_tests.rs
