[package]
name = "agstash"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to stash and apply changes to AGENTS.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
colored = "2.1.0"
indicatif = "0.17.9"
home = "0.5.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
