[package]
name = "agstash"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to stash and apply changes to AGENTS.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "3.0"
home = "0.5.12"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
criterion = "0.8"
